feature(versioning) 🎉🎉🎉 upgrade all deps and adjust scripts accordingly 🎉🎉🎉