@@ -4,7 +4,6 @@ import org.gradle.api.plugins.jvm.internal.JvmPluginExtension
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 import org.springframework.boot.gradle.tasks.run.BootRun
-import versioning.Deps
 
 plugins {
     id 'idea'
@@ -12,14 +11,11 @@ plugins {
     id 'application'
     id 'maven-publish'
     id 'kotlin-convention-helper'
-    id 'jackson-convention-helper'
     //id 'io.micronaut.application' // FIXME: `org.springframework.boot` also adds `developmentOnly` so Gradle fails.
-    //id 'dependencies-reporting-helper' //FIXME: groovy won't run on java 16
-    //id 'com.webcohesion.enunciate'
-    id 'com.github.johnrengelman.shadow'
+    alias(libs.plugins.shadow)
     //id 'org.hibernate.orm'
-    id 'org.springframework.boot'
-    id 'io.quarkus'
+    alias(libs.plugins.spring.boot)
+    alias(libs.plugins.quarkus)
 }
 
 repositories.mavenCentral()
@@ -49,19 +45,15 @@ configurations {
     springDevelopmentOnly.extendsFrom(configurations.developmentOnly)
 }
 
-java.toolchain.languageVersion.set(JavaLanguageVersion.of(16))
+java.toolchain.languageVersion.set(JavaLanguageVersion.of(17))
 tasks.withType(JavaCompile).configureEach {
-    it.options.release.set(14)
+    it.options.release.set(17)
 }
 tasks.withType(KotlinCompile).configureEach {
-    it.kotlinOptions.jdkHome = javaToolchains.launcherFor {
-        languageVersion.set(JavaLanguageVersion.of(16))
-    }.get().executablePath.asFile.parentFile.parent
-    it.kotlinOptions.jvmTarget = "14"
+    it.kotlinOptions.jvmTarget = "16"
 }
 
 dependencies {
-    //enunciate('dk.jyskebank.tooling.enunciate:enunciate-openapi:1.1.+')
 
     annotationProcessor              platform(project(':convention'))
     kapt                             platform(project(':convention'))
@@ -101,8 +93,7 @@ dependencies {
      * JPAMODELGEN better go first!
      * For IDEA based build (Ant) this has to be in `annotationProcessor`
      */
-    kaptMicronaut                    Deps.Libs.VALIDATOR_AP
-    kaptMicronaut                    'io.micronaut.configuration:micronaut-openapi'
+    kaptMicronaut                    libs.validator.ap
     kaptMicronaut                    'io.micronaut.spring:micronaut-spring-annotation'//:2.1.0'
     kaptMicronaut                    'io.micronaut.spring:micronaut-spring-boot-annotation'//:2.1.0'
     kaptMicronaut                    'io.micronaut.spring:micronaut-spring-web-annotation'//:2.1.0'
@@ -110,10 +101,13 @@ dependencies {
     kaptMicronaut                    'io.micronaut:micronaut-inject-java'
     kaptMicronaut                    'io.micronaut:micronaut-validation'
     kaptMicronaut                    'org.springframework.boot:spring-boot-configuration-processor'//:2.1.0'
+    kaptMicronaut                    'io.micronaut:micronaut-http-validation'
+    kaptMicronaut                    'io.micronaut.data:micronaut-data-processor'
+    kaptMicronaut                    'io.micronaut.openapi:micronaut-openapi'
 
-    micronautCompileOnly             Deps.Jakarta.CDI
-    micronautCompileOnly             Deps.Jakarta.SERVLET
-    micronautCompileOnly             Deps.Libs.SLF4J_API
+    micronautCompileOnly             libs.cdi
+    micronautCompileOnly             libs.servlet
+    micronautCompileOnly             libs.slf4j.api
     micronautCompileOnly             'org.graalvm.nativeimage:svm'
 
     micronautDevelopmentOnly         'io.methvin:directory-watcher'
@@ -126,63 +120,64 @@ dependencies {
 
     kaptMicronaut          (project(':time-service.api')) {
         capabilities {
-            requireCapability("${project.group}:${project(':time-service.api').name}-micronaut")
+            requireCapability "${project.group}:${project(':time-service.api').name}-micronaut"
         }
     }
     kaptMicronaut          (project(':time-service.app')) {
         capabilities {
-            requireCapability("${project.group}:${project(':time-service.app').name}-micronaut")
+            requireCapability "${project.group}:${project(':time-service.app').name}-micronaut"
         }
     }
 
     micronautImplementation          (project(':time-service.api')) {
         capabilities {
-            requireCapability("${project.group}:${project(':time-service.api').name}-micronaut")
+            requireCapability "${project.group}:${project(':time-service.api').name}-micronaut"
         }
     }
     micronautImplementation          (project(':time-service.app')) {
         capabilities {
-            requireCapability("${project.group}:${project(':time-service.app').name}-micronaut")
+            requireCapability "${project.group}:${project(':time-service.app').name}-micronaut"
         }
     }
+
     micronautImplementation          'com.blazebit:blaze-persistence-integration-hibernate-base'
-    micronautImplementation          'com.fasterxml.jackson.module:jackson-module-kotlin'
-    micronautImplementation          'com.kumuluz.ee.rest:kumuluzee-rest-core:1.2.3'
-    //micronautImplementation          'io.ktor:ktor-jackson'
-    //micronautImplementation          'io.ktor:ktor-server-netty'
-    micronautImplementation          'io.micronaut.configuration:micronaut-hibernate-jpa'
-    micronautImplementation          'io.micronaut.configuration:micronaut-hibernate-jpa-spring' //Spring-based transaction management
-    micronautImplementation          'io.micronaut.configuration:micronaut-micrometer-core'
-    micronautImplementation          'io.micronaut.data:micronaut-data-hibernate-jpa:1.1.0.RC1'
-    //micronautImplementation          'io.micronaut.kotlin:micronaut-ktor'
-    micronautImplementation          'io.micronaut.kotlin:micronaut-kotlin-runtime:1.0.1'
-    micronautImplementation          'io.micronaut.kotlin:micronaut-kotlin-extension-functions:1.0.1'
-    micronautImplementation          'io.micronaut.configuration:micronaut-jdbc-hikari' //Important for starting up Database connectivity
+    micronautImplementation          'io.micronaut.data:micronaut-data-hibernate-jpa'
+    micronautImplementation          'io.micronaut.data:micronaut-data-spring'
+    micronautImplementation          'io.micronaut.data:micronaut-data-spring-jpa'
+    micronautImplementation          'io.micronaut.kotlin:micronaut-kotlin-extension-functions'
+    micronautImplementation          'io.micronaut.kotlin:micronaut-kotlin-runtime'
+    micronautImplementation          'io.micronaut.sql:micronaut-jdbc-hikari'
+    micronautImplementation          'io.micronaut:micronaut-http-client'
     micronautImplementation          'io.micronaut:micronaut-http-server'
-    micronautImplementation          'io.micronaut:micronaut-inject'
-    micronautImplementation          'io.micronaut:micronaut-management' //management endpoints
-    micronautImplementation          'io.micronaut:micronaut-runtime' //FIXME: N.B. INCLUDE IT !!!!!!!!!!!!!!!!!
+    micronautImplementation          'io.micronaut:micronaut-http-server-netty'
+    micronautImplementation          'io.micronaut:micronaut-jackson-databind'
+    micronautImplementation          'io.micronaut:micronaut-runtime'
+    micronautImplementation          'io.micronaut:micronaut-validation'
     micronautImplementation          'io.swagger.core.v3:swagger-annotations'
-    micronautImplementation          Deps.Libs.COROUTINES_JDK8
-    micronautImplementation          Deps.Libs.COROUTINES_RXJAVA2
+    micronautImplementation          'jakarta.annotation:jakarta.annotation-api'
+    micronautImplementation          'org.slf4j:jcl-over-slf4j'
     micronautImplementation          'org.springframework.boot:spring-boot-starter'
     micronautImplementation          'org.springframework.boot:spring-boot-starter-web'
+    micronautImplementation          'org.springframework:spring-orm'
 
+    micronautRuntimeOnly             'org.jetbrains.kotlin:kotlin-reflect'
     micronautRuntimeOnly             'ch.qos.logback:logback-classic'
     micronautRuntimeOnly             'com.h2database:h2'
     micronautRuntimeOnly             'com.blazebit:blaze-persistence-core-impl'
     micronautRuntimeOnly             'com.blazebit:blaze-persistence-entity-view-impl'
-    micronautRuntimeOnly             'com.blazebit:blaze-persistence-integration-hibernate-5.4'
+    micronautRuntimeOnly             'com.blazebit:blaze-persistence-integration-hibernate-5.6'
     micronautRuntimeOnly             'com.blazebit:blaze-persistence-jpa-criteria-impl'
     micronautRuntimeOnly             'io.micronaut.spring:micronaut-spring-boot'//:2.1.0')
     micronautRuntimeOnly             'io.micronaut.spring:micronaut-spring-web'//:2.1.0')
-    micronautImplementation             'io.micronaut:micronaut-http-server-netty'
 
-    kaptMicronautTest                'org.apache.logging.log4j:log4j-to-slf4j:2.13.3'
-    kaptMicronautTest                'org.slf4j:jul-to-slf4j:1.7.30'
+    kaptMicronautTest                'org.slf4j:jul-to-slf4j:1.7.36'
+    kaptMicronautTest                'io.micronaut.spring:micronaut-spring-annotation'
+    kaptMicronautTest                'io.micronaut.spring:micronaut-spring-boot'
+    kaptMicronautTest                'io.micronaut.spring:micronaut-spring-web-annotation'
 
     micronautTestImplementation      'io.micronaut.test:micronaut-test-junit5'
-    micronautTestImplementation      'io.micronaut.test:micronaut-test-kotlintest'
+    micronautTestImplementation      'io.micronaut.test:micronaut-test-kotest'
+    micronautTestImplementation      'org.assertj:assertj-core'
 
     kaptSpring                       'org.springframework.boot:spring-boot-configuration-processor'
 
@@ -193,7 +188,7 @@ dependencies {
     springImplementation             project(':shared')
     springImplementation             project(':time-service.api')
     springImplementation             project(':time-service.app')
-    springImplementation             Deps.Jakarta.INJECT
+    springImplementation             libs.inject
     //springImplementation             'com.vaadin:vaadin-spring-boot-starter'
     springImplementation             'com.fasterxml.jackson.module:jackson-module-kotlin'
     springImplementation             'io.swagger.core.v3:swagger-annotations'
@@ -212,19 +207,23 @@ dependencies {
 
     springRuntimeOnly                'com.blazebit:blaze-persistence-core-impl'
     springRuntimeOnly                'com.blazebit:blaze-persistence-entity-view-impl'
-    springRuntimeOnly                'com.blazebit:blaze-persistence-integration-hibernate-5.4'
+    springRuntimeOnly                'com.blazebit:blaze-persistence-integration-hibernate-5.6'
     springRuntimeOnly                'com.blazebit:blaze-persistence-jpa-criteria-impl'
 
     springRuntimeOnly                'com.h2database:h2'
+    springRuntimeOnly                'org.slf4j:jcl-over-slf4j'
 
     springTestImplementation         'org.springframework.boot:spring-boot-starter-test'
+
+    compileOnly                      libs.jaxrs
+    compileOnly                      libs.annotation
 
     implementation                   project(':shared')
     implementation                   project(':time-service.api')
     implementation                   project(':time-service.app')
     implementation                   'com.blazebit:blaze-persistence-integration-quarkus'
+    implementation                   'io.quarkus:quarkus-arc'
     implementation                   'io.quarkus:quarkus-config-yaml'
-    //implementation                   'io.quarkus:quarkus-grpc'
     implementation                   'io.quarkus:quarkus-hibernate-orm'
     implementation                   'io.quarkus:quarkus-jackson'
     implementation                   'io.quarkus:quarkus-jdbc-h2'
@@ -239,8 +238,9 @@ dependencies {
 
     runtimeOnly                      'com.blazebit:blaze-persistence-core-impl'
     runtimeOnly                      'com.blazebit:blaze-persistence-entity-view-impl'
-    runtimeOnly                      'com.blazebit:blaze-persistence-integration-hibernate-5.4'
+    runtimeOnly                      'com.blazebit:blaze-persistence-integration-hibernate-5.6'
     runtimeOnly                      'com.blazebit:blaze-persistence-jpa-criteria-impl'
+    runtimeOnly                      'com.fasterxml.jackson.module:jackson-module-kotlin'
     runtimeOnly                      'com.h2database:h2'
 
     testImplementation               'io.quarkus:quarkus-junit5'
@@ -268,21 +268,11 @@ rootProject.idea {
 
 idea.module.downloadSources = true
 
-//Quarkus does this anyways
-//hibernate {
-//    enhance {
-//        enableLazyInitialization    = true
-//        enableDirtyTracking         = true
-//        enableAssociationManagement = true
-//        enableExtendedEnhancement   = false
-//    }
-//}
-
 application {
     //mainModule.convention('com.example.marvel.runtime')
     mainClass                 = 'com.example.marvel.ApplicationKt'
     mainClassName             = 'com.example.marvel.ApplicationKt' //FIXME: Shadow plugin uses older Gradle Tooling API, there is no `mainClass` prop
-    applicationDefaultJvmArgs = ['-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote', '--illegal-access=warn']
+    applicationDefaultJvmArgs = ['-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote']
 }
 
 tasks.withType(ProcessResources).configureEach {
@@ -298,10 +288,10 @@ tasks.withType(AbstractArchiveTask).configureEach {
 tasks.withType(BootRun).configureEach {
     sourceResources(sourceSets.spring)
     it.classpath = sourceSets.spring.runtimeClasspath
-//    it.jvmArgs("-javaagent:${project.configurations.agent.asPath}")
+//    it.jvmArgs '-javaagent:${project.configurations.agent.asPath}'
 }
 //tasks.withType(BootJar).configureEach {
-//    it.jvmArgs("-javaagent:${project.configurations.agent.asPath}")
+//    it.jvmArgs '-javaagent:${project.configurations.agent.asPath}'
 //}
 tasks.named(ApplicationPlugin.TASK_RUN_NAME, JavaExec).configure {
     it.classpath = sourceSets.micronaut.runtimeClasspath
@@ -309,9 +299,9 @@ tasks.named(ApplicationPlugin.TASK_RUN_NAME, JavaExec).configure {
 }
 tasks.withType(JavaExec).configureEach {
     classpath += configurations.developmentOnly
-    javaLauncher = javaToolchains.launcherFor {
-        languageVersion = JavaLanguageVersion.of(16)
-    }
+    javaLauncher.set(javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    })
 }
 tasks.withType(ShadowJar).configureEach {
     mergeServiceFiles()
@@ -320,9 +310,9 @@ tasks.withType(Test).configureEach {
     classpath += configurations.developmentOnly
     useJUnitPlatform()
     exclude('**/Native*')
-    javaLauncher = javaToolchains.launcherFor {
-        languageVersion = JavaLanguageVersion.of(16)
-    }
+    javaLauncher.set(javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(17)
+    })
 }
 publishing {
     repositories.maven { url 'https://maven.pkg.github.com/soberich/marvel' }
@@ -371,7 +361,8 @@ configure([
 
         //FIXME: Unfortunately all this is leaked to compile classpath, hence visible in subproject. Otherwise AOT compilation won't work.
         //main dependency for integration Micronaut <-> Hibernate
-        micronautImplementation          'io.micronaut.configuration:micronaut-hibernate-jpa'
+//        micronautImplementation          'io.micronaut.configuration:micronaut-hibernate-jpa'
+        micronautImplementation          'io.micronaut.data:micronaut-data-hibernate-jpa'
 
         micronautImplementation          'io.micronaut:micronaut-core'       //FIXME: N.B. INCLUDE THIS ONE, annotated classes, endpoints won't be discovered otherwise !!!!!!!!!!!!!!!!!!
         micronautImplementation          'io.micronaut:micronaut-validation' //FIXME: N.B. INCLUDE THIS ONE, annotated classes, endpoints won't be discovered otherwise !!!!!!!!!!!!!!!!!!
